Back to angelbobsblog, one more Disqus thing to try.

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ googleplus_user: 114344101023717223933
 googleplus_hidden: false
 
 # Disqus Comments
-disqus_short_name: rubymadscience
+disqus_short_name: angelbobsblog
 disqus_show_comment_count: true
 
 # Google Analytics
