--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [custom/asides/about.html, custom/asides/rebuilding_signup.html, asides/recent_posts.html, asides/github.html]
+default_asides: [custom/asides/about.html, custom/asides/rebuilding_signup.html, asides/popular_posts.html, asides/recent_posts.html, asides/github.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -87,3 +87,15 @@ disqus_show_comment_count: true
 
 # Google Analytics
 google_analytics_tracking_id: UA-30520713-1
+
+# Octopress page-view settings
+page-view:
+  service_account_email:    320994918409-dbaka0j2rp4hvknq9o6if0mjn56ct11b@developer.gserviceaccount.com
+  key_file: privatekey.p12  # service account private key file
+  key_secret: notasecret    # service account private key's password
+  profileID:                ga:58144839
+  start: 3 months ago       # Beginning of report
+  end: now                  # End of report
+  metric: ga:pageviews      # Metric code
+  segment: gaid::-1         # all visits
+  filters:                  # optional
