--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,9 @@ author: Noah Gibbs
 simple_search: http://google.com/search
 description: Noah Gibbs, Ruby Mad Science, Rebuilding Rails, Rack
 
+# Do not publish posts marked as future
+future: false
+
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
 # http://www.ruby-doc.org/core-1.9.2/Time.html#method-i-strftime
