--- a/.powrc
+++ b/.powrc
@@ -1,4 +1,3 @@
-if [ -f "$rvm_path/scripts/rvm" ] && [ -f ".rvmrc" ]; then
+if [ -f "$rvm_path/scripts/rvm" ]; then
   source "$rvm_path/scripts/rvm"
-  source ".rvmrc"
 fi
